@@ -505,20 +505,25 @@ public record SynchronousSchedulerAgent(
       for (var goalEval : plan.getEvaluation().getGoalEvaluations().entrySet()) {
         var goalId = goalsToIds.get(goalEval.getKey());
         //goal could be anonymous, a subgoal of a composite goal for example, and thus have no meaning for results sent back
+        final var activitiesById = plan.getActivitiesById();
         if(goalId != null) {
           final var goalResult = new ScheduleResults.GoalResult(
               goalEval
                   .getValue()
-                  .getInsertedActivities()
-                  .stream()
-                  .map(instancesToIds::get)
-                  .collect(Collectors.toList()),
+                  .getInsertedActivities().stream()
+                      .map(activityInstance -> instancesToIds.get(
+                          activityInstance.getParentActivity()
+                              .map(activitiesById::get)
+                              .orElse(activityInstance))
+                  ).toList(),
               goalEval
                   .getValue()
-                  .getAssociatedActivities()
-                  .stream()
-                  .map(instancesToIds::get)
-                  .collect(Collectors.toList()),
+                  .getAssociatedActivities().stream()
+                      .map(activityInstance -> instancesToIds.get(
+                        activityInstance.getParentActivity()
+                            .map(activitiesById::get)
+                            .orElse(activityInstance))
+                    ).toList(),
               goalEval.getValue().getScore() >= 0);
           goalResults.put(goalId, goalResult);
         }
